t4-Sonarqube&Testing